ext/mixed/css/display.css
/* ... */
.action-button.disabled:before {
    -webkit-filter: grayscale(100%);
    filter: grayscale(100%);
    opacity: 0.25;
}

.action-button.pending {
    visibility: hidden;
}

.actions {
    display: flex;
    float: right;
    margin: -0.25em;
}

.actions:after {
    clear: both;
    content: '';
    display: block;
}

.action-button {
    display: inline-block;
    border: 0;
    margin: 0;
    padding: 0.3em;
    background: transparent;
    font-size: inherit;
}

button.action-button {
    cursor: pointer;
}

.action-button[data-icon]:before {
    content: "";
    width: 1.14285714em; /* 14px => 16px */
    height: 1.14285714em; /* 14px => 16px */
    display: block;
    background-color: transparent;
    background-repeat: no-repeat;
    background-size: contain;
}

.action-button[data-icon=entry-current]:before {
    background-image: url("/mixed/img/entry-current.svg");
}
.action-button[data-icon=view-note]:before {
    background-image: url("/mixed/img/view-note.svg");
}
.action-button[data-icon=add-term-kanji]:before {
    background-image: url("/mixed/img/add-term-kanji.svg");
}
.action-button[data-icon=add-term-kana]:before {
    background-image: url("/mixed/img/add-term-kana.svg");
}
.action-button[data-icon=play-audio]:before {
    background-image: url("/mixed/img/play-audio.svg");
}
.action-button[data-icon=source-term]:before {
    background-image: url("/mixed/img/source-term.svg");
}

.term-expression .kanji-link {
    border-bottom: 0.03571428em dashed var(--dark-border-color); /* 28px => 1px */
    color: var(--default-text-color);
    text-decoration: none;
}

.term-expression[data-frequency=popular]>.term-expression-text,
.term-expression[data-frequency=popular]>.term-expression-text .kanji-link {
    color: var(--popuplar-kanji-text-color);
}

.term-expression[data-frequency=rare]>.term-expression-text,
.term-expression[data-frequency=rare]>.term-expression-text .kanji-link {
    color: var(--very-light-text-color);
}

.entry:not(.entry-current) .current {
    display: none;
}

.tag {
    display: inline-block;
    padding: 0.2em 0.6em 0.3em;
    font-size: 75%;
    font-weight: 700;
    line-height: 1.25;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: 0.25em;
    color: var(--tag-text-color);
    background-color: var(--tag-default-background-color);
}

.tag[data-category=name] {
    background-color: var(--tag-name-background-color);
}

.tag[data-category=expression] {
    background-color: var(--tag-expression-background-color);
}

.tag[data-category=popular] {
    background-color: var(--tag-popular-background-color);
}

.tag[data-category=frequent] {
    background-color: var(--tag-frequent-background-color);
}

.tag[data-category=archaism] {
    background-color: var(--tag-archaism-background-color);
}

.tag[data-category=dictionary] {
    background-color: var(--tag-dictionary-background-color);
}

.tag[data-category=frequency] {
    background-color: var(--tag-frequency-background-color);
}

.tag[data-category=partOfSpeech] {
    background-color: var(--tag-part-of-speech-background-color);
}

.tag[data-category=search] {
    background-color: var(--tag-search-background-color);
}

.tag[data-category=pitch-accent-dictionary] {
    background-color: var(--tag-pitch-accent-dictionary-background-color);
}

.tag-inner {
    display: block;
}

.tag-list>.tag {
    margin-right: 0.375em;
}

:root:not([data-enable-search-tags=true]) .tag[data-category=search] {
    display: none;
}

.entry-header2,
.entry-header3 {
    display: inline;
}

.term-frequency-separator::before {
    content: ":";
}

.entry+.entry {
    border-top: 0.07142857em solid var(--light-border-color); /* 14px => 1px */
}

.entry[data-type=term][data-expression-multi=true] .actions>.action-play-audio {
    display: none;
}

.term-reasons {
    display: inline-block;
    color: var(--light-text-color);
}

.term-reasons>.term-reason+.term-reason-separator+.term-reason:before {
    content: " \00AB  "; /* The two spaces is not a typo */
    white-space: pre-wrap;
    display: inline;
}

.term-expression-list {
    display: inline-block;
}

.term-expression {
    display: inline-block;
}

.term-expression-text {
    display: inline-block;
    font-size: 2em;
}

.term-expression-details {
    display: inline;
}

.term-expression-details>.tags {
    display: inline;
}

.term-expression-details>.frequencies {
    display: none;
}

.term-expression-list>.term-expression:not(:last-of-type):after {
    font-size: 2em;
    content: "\3001";
}

.entry[data-expression-multi=true] .term-expression-list>.term-expression:last-of-type:after {
    font-size: 2em;
    content: "\3000";
    visibility: hidden;
}

.entry[data-expression-multi=true] .term-expression-list .term-expression-details {
    display: inline-block;
    position: relative;
    width: 0;
    height: 0;
    visibility: hidden;
    z-index: 1;
}

.entry[data-expression-multi=true] .term-expression:hover .term-expression-details {
    visibility: visible;
}

.entry[data-expression-multi=true] .term-expression-list .term-expression-details>.action-play-audio {
    position: absolute;
    left: 0;
    bottom: 0.5em;
}

.entry:not([data-expression-multi=true]) .term-expression-list .term-expression-details>.action-play-audio {
    display: none;
}

.entry[data-expression-multi=true] .term-expression-list .term-expression-details>.tags {
    display: block;
    position: absolute;
    left: 0;
    bottom: -0.5em;
    white-space: nowrap;
}

.entry[data-expression-multi=true] .term-expression-list .term-expression-details>.frequencies {
    display: block;
    position: absolute;
    left: 0;
    bottom: -1.9em;
    white-space: nowrap;
}

.term-definition-list {
    margin: 0;
    padding: 0;
    list-style-type: none;
    color: var(--light-text-color);
}

.term-definition-list:not([data-count="0"]):not([data-count="1"]) {
    padding-left: 1.4em;
    list-style-type: decimal;
}
/* ... */

